2007-03-13  Sven Neumann  <sven@gimp.org>

	* data/brushes/Makefile.am
	* data/brushes/thegimp.gbr
	* data/brushes/xcf.gbr: removed two legacy brushes.

2007-03-13  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/script-fu/script-fu-console.c: Fix for bug #417467
	based on modified patch by Eric Lamarque and suggested by Mitch.
	Allows build without warnings and correct localization for Solaris
	and other platforms.

2007-03-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_response):
	added a g_return_if_fail() check to catch bug #414006.

2007-03-13  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (gimp_label_set_attributes): fixed
	implementation for PANGO_ATTR_STRIKETHROUGH, spotted by Behdad
	Esfahbod.

2007-03-12  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-transform.c: code cosmetics.

2007-03-12  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmagnifytool.[ch]: lots of fixes and changes:

	- Request click events and use them instead of looking at the
	  distance the mouse travelled ourselves.
	- Also zoom when the user draws a very thin rectangle or just a
	  line, there is no reason to treat that as click.
	- Changed all calculations and stored values to double so the tool
	  continues to work smoothly at high zoom levels.
	- Fix scale calculation when zooming out (was totally b0rk).
	- Changed offset calculation when zooming out so that the current
	  viewport ends up within the drawn rectangle (which is the
	  opposite of what zooming in does).

2007-03-12  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin.[ch]: gimp_plug_in_get_undo_desc() uses
	gimp_plug_in_procedure_get_label(). Made the return value const.

	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/message.pdb
	* tools/pdbgen/pdb/undo.pdb: changed accordingly.

	* app/actions/plug-in-actions.c: cosmetics.

	* app/pdb/undo_cmds.c
	* app/pdb/message_cmds.c
	* app/pdb/drawable_cmds.c: regenerated.
